--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,11 @@ services:
       - ./infrastructure/script/data/repository/mongo/.env 
     networks:
       - application-network
+    healthcheck:
+      test: ["CMD", "mongo", "--eval", "db.adminCommand('ping')"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   app-local:
     build:
@@ -42,7 +47,8 @@ services:
       - "8080:8080"
     working_dir: /app
     depends_on:
-      - mongodb
+      mongodb:
+        condition: service_healthy
     networks:
       - application-network
     command: ./main 
