--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -30,9 +30,10 @@ jobs:
     - name: Build and Run Develop
       run: |
         docker compose up mongodb -d
-        sleep 4  # Wait for 4 seconds to allow container to start up
+        # sleep 4  # Wait for 4 seconds to allow container to start up
 
         docker logs mongodb
+        sleep 7  # Wait for 7 seconds to allow container to start up
 
         docker compose up app-develop -d
 
