--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -1,8 +1,8 @@
 name: Unit tests workflow
 
 on:
-  # push:
-    # branches: ['**']  
+  push:
+    branches: ['**']  
   pull_request:
     branches: ['**'] 
 
