--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,7 +1,7 @@
 name: Golangci-lint workflow
 on:
-  push:
-    branches: ['**']
+  # push:
+    # branches: ['**']
   pull_request:
     branches: ['**']
 
