--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -1,10 +1,10 @@
 name: Unit tests workflow
 
 on:
-  # push:
-    # branches: ['**']  
+  push:
+    branches: ['**']  
   pull_request:
-    branches: ['**'] 
+    branches: ['**']
 
 jobs:
   build:
@@ -18,4 +18,5 @@ jobs:
         go-version: stable
 
     - name: Unit tests
+      if: ${{ github.event_name == 'pull_request' || github.event_name == 'push' && github.actor != 'github-actions' }}
       run: go test ./test/unit/...
