--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -5,8 +5,42 @@ on:
     branches: [ "develop" ]
 
 jobs:
+  generate-tag:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
+    - name: Generate Version Tag
+      id: version
+      run: |
+        git fetch --tags
+        LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "1.0.0")
+        IFS='.' read -r MAJOR MINOR PATCH <<< "$LATEST_TAG"
+        PATCH=$((PATCH+1))
+        NEW_TAG="$MAJOR.$MINOR.$PATCH"
+        echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
+        echo "Generated Tag: $NEW_TAG"
+
+  push-git-tag:
+    runs-on: ubuntu-latest
+    needs: generate-tag
+
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
+    - name: Push New Git Tag
+      run: |
+        git config user.name "GitHub Actions"
+        git config user.email "actions@github.com"
+        git tag ${{ env.NEW_TAG }}
+        git push origin ${{ env.NEW_TAG }}
+
   build-and-push:
     runs-on: ubuntu-latest
+    needs: [generate-tag, push-git-tag]
 
     steps:
     - name: Checkout Code
@@ -17,36 +51,6 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Generate Version Tag
-      id: version
-      run: |
-        # Fetch all tags
-        git fetch --tags
-
-        # Get the latest tag or default to 1.0.0
-        LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "1.0.0")
-
-        # Parse the version (major.minor.patch)
-        IFS='.' read -r MAJOR MINOR PATCH <<< "$LATEST_TAG"
-        PATCH=$((PATCH+1)) # Increment the patch version
-
-        # Generate the new tag
-        NEW_TAG="$MAJOR.$MINOR.$PATCH"
-
-        # Output the new tag for use in later steps
-        echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
-        echo "Generated Tag: $NEW_TAG"
-
-    - name: Push New Git Tag
-      if: ${{ success() }}
-      run: |
-        git config user.name "GitHub Actions"
-        git config user.email "actions@github.com"
-
-        # Create and push the new tag
-        git tag ${{ env.NEW_TAG }}
-        git push origin ${{ env.NEW_TAG }}
 
     - name: Set up Go
       uses: actions/setup-go@v5
@@ -67,21 +71,20 @@ jobs:
 
     - name: Build Docker Image
       run: |
-        docker build -t secrets.DOCKER_USERNAME/app-develop:${{ env.NEW_TAG }} .
-        docker tag secrets.DOCKER_USERNAME/app-develop:${{ env.NEW_TAG }} secrets.DOCKER_USERNAME/app-develop:latest
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/app-develop:${{ env.NEW_TAG }} .
+        docker tag ${{ secrets.DOCKER_USERNAME }}/app-develop:${{ env.NEW_TAG }} ${{ secrets.DOCKER_USERNAME }}/app-develop:latest
 
     - name: Push Docker Image
       run: |
-        docker push secrets.DOCKER_USERNAME/app-develop:${{ env.NEW_TAG }}
-        docker push secrets.DOCKER_USERNAME/app-develop:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/app-develop:${{ env.NEW_TAG }}
+        docker push ${{ secrets.DOCKER_USERNAME }}/app-develop:latest
 
-    - name: Build and Run Develop
+    - name: Build and Run Develop Containers
       run: |
         docker compose up mongodb -d
-        sleep 32  # Wait for 32 seconds to allow container to start up
+        sleep 32
         docker compose up app-develop -d
-       
-        sleep 4  # Wait for 4 seconds to allow container to start up
+        sleep 4
         docker logs go-blog-platform-app-develop-1
 
     - name: List All Running Containers
