--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -48,6 +48,9 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v4
 
+    - name: Debug New Tag
+      run: echo "New Tag: ${{ env.NEW_TAG }}"
+
     - name: Log in to DockerHub
       uses: docker/login-action@v2
       with:
