--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -15,11 +15,31 @@ jobs:
     - name: Generate Version Tag
       id: version
       run: |
+        # Fetch existing tags to determine the latest version
         git fetch --tags
         LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "1.0.0")
+
+        # Parse the version (MAJOR.MINOR.PATCH)
         IFS='.' read -r MAJOR MINOR PATCH <<< "$LATEST_TAG"
+
+        # Increment PATCH version
         PATCH=$((PATCH+1))
+
+        # Create new tag
         NEW_TAG="$MAJOR.$MINOR.$PATCH"
+
+        # Check if NEW_TAG is valid (not empty or malformed)
+        if [[ -z "$NEW_TAG" ]]; then
+          echo "Error: Generated tag is empty."
+          exit 1
+        fi
+
+        # Ensure the tag format is valid (example: X.Y.Z where X, Y, Z are numbers)
+        if ! [[ "$NEW_TAG" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+          echo "Error: Invalid tag format: $NEW_TAG"
+          exit 1
+        fi
+
         echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
         echo "Generated Tag: $NEW_TAG"
 
