--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -3,13 +3,19 @@ name: Develop Workflow with Version Tagging and Git Tag Sync
 on:
   pull_request:
     branches: [ "develop" ]
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Set the version tag manually (e.g., 1.2.3)'
+        required: false
+        default: 'auto'  # default is 'auto' for auto-increment if no version is provided
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Check out the repository
+    # Step 1: Checkout Code
     - name: Checkout Code
       uses: actions/checkout@v4
 
@@ -20,32 +26,31 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Step 3: Generate Version Tag (Start with 1.0.0 or Increment)
-    - name: Generate Version Tag
+    # Step 3: Generate or Set Version Tag (Manual or Auto-Increment)
+    - name: Set Version Tag
       id: version
       run: |
-        # Fetch all tags
-        git fetch --tags
-
-        # Get the latest tag or default to 1.0.0
-        LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "1.0.0")
-
-        # Parse the version (major.minor.patch)
-        IFS='.' read -r MAJOR MINOR PATCH <<< "$LATEST_TAG"
-        PATCH=$((PATCH+1)) # Increment the patch version
-
-        # Try to generate a unique tag
-        NEW_TAG="$MAJOR.$MINOR.$PATCH"
-        
-        # Loop until we find a tag that does not exist
-        while git rev-parse "$NEW_TAG" >/dev/null 2>&1; do
-          PATCH=$((PATCH+1))  # Increment patch version again
+        if [ "${{ github.event.inputs.version }}" != "auto" ]; then
+          # Use the manually provided version if it's not "auto"
+          NEW_TAG="${{ github.event.inputs.version }}"
+        else
+          # Auto-increment the version (patch version)
+          git fetch --tags
+          LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "1.0.0")
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$LATEST_TAG"
+          PATCH=$((PATCH+1)) # Increment the patch version
           NEW_TAG="$MAJOR.$MINOR.$PATCH"
-        done
+
+          # Ensure the tag is unique
+          while git rev-parse "$NEW_TAG" >/dev/null 2>&1; do
+            PATCH=$((PATCH+1))  # Increment again if tag already exists
+            NEW_TAG="$MAJOR.$MINOR.$PATCH"
+          done
+        fi
 
         # Output the new tag for use in later steps
         echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
-        echo "Generated Tag: $NEW_TAG"
+        echo "Generated or Set Tag: $NEW_TAG"
 
     # Step 4: Push New Git Tag
     - name: Push New Git Tag
@@ -53,12 +58,12 @@ jobs:
       run: |
         git config user.name "GitHub Actions"
         git config user.email "actions@github.com"
-
+        
         # Create and push the new tag
         git tag ${{ env.NEW_TAG }}
         git push origin ${{ env.NEW_TAG }}
 
-    # Step 5: Set up Go
+    # Step 5: Set up Go (for building)
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
@@ -78,14 +83,14 @@ jobs:
         echo "ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }}" >> infrastructure/script/data/repository/mongo/.env
         echo "ADMIN_HASHED_PASSWORD=${{ secrets.ADMIN_HASHED_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
 
-    # Step 8: Build Docker Image for app-develop
+    # Step 8: Build and Push Docker Images for app-develop
     - name: Build Docker Image for app-develop
       run: |
-        docker compose up mongodb -d
-        sleep 32  # Wait for 32 seconds to allow container to start up
+        docker compose up mongodb -d 
+        sleep 32  # Wait for MongoDB to start
+
         docker compose up app-develop -d
-       
-        sleep 4  # Wait for 4 seconds to allow container to start up
+        sleep 4  # Wait for the app container to initialize
         docker logs go-blog-platform-app-develop-1
 
         docker buildx build -f infrastructure/deployment/docker/Dockerfile.develop -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.NEW_TAG }} . --push
