--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -6,16 +6,16 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'Set the version tag manually (e.g., 1.2.3)'
+        description: 'Manually specify the version'
         required: false
-        default: 'auto'  # default is 'auto' for auto-increment if no version is provided
+        default: ''
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Checkout Code
+    # Step 1: Check out the repository
     - name: Checkout Code
       uses: actions/checkout@v4
 
@@ -26,31 +26,27 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Step 3: Generate or Set Version Tag (Manual or Auto-Increment)
-    - name: Set Version Tag
+    # Step 3: Determine Version Tag (Use Git tag or fallback to auto-increment)
+    - name: Determine Version Tag
       id: version
       run: |
-        if [ "${{ github.event.inputs.version }}" != "auto" ]; then
-          # Use the manually provided version if it's not "auto"
-          NEW_TAG="${{ github.event.inputs.version }}"
+        # If a version is provided via the workflow dispatch input, use it
+        if [ -n "${{ github.event.inputs.version }}" ]; then
+          VERSION="${{ github.event.inputs.version }}"
         else
-          # Auto-increment the version (patch version)
+          # If no version is provided, fetch the latest Git tag
           git fetch --tags
-          LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "1.0.0")
-          IFS='.' read -r MAJOR MINOR PATCH <<< "$LATEST_TAG"
-          PATCH=$((PATCH+1)) # Increment the patch version
-          NEW_TAG="$MAJOR.$MINOR.$PATCH"
+          LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
 
-          # Ensure the tag is unique
-          while git rev-parse "$NEW_TAG" >/dev/null 2>&1; do
-            PATCH=$((PATCH+1))  # Increment again if tag already exists
-            NEW_TAG="$MAJOR.$MINOR.$PATCH"
-          done
+          # Parse the version (major.minor.patch)
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$LATEST_TAG"
+          PATCH=$((PATCH+1))  # Increment the patch version
+          
+          VERSION="v$MAJOR.$MINOR.$PATCH"
         fi
 
-        # Output the new tag for use in later steps
-        echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
-        echo "Generated or Set Tag: $NEW_TAG"
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
+        echo "Version Tag: $VERSION"
 
     # Step 4: Push New Git Tag
     - name: Push New Git Tag
@@ -60,10 +56,10 @@ jobs:
         git config user.email "actions@github.com"
         
         # Create and push the new tag
-        git tag ${{ env.NEW_TAG }}
-        git push origin ${{ env.NEW_TAG }}
+        git tag "${{ env.VERSION }}"
+        git push origin "${{ env.VERSION }}"
 
-    # Step 5: Set up Go (for building)
+    # Step 5: Set up Go
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
@@ -93,7 +89,7 @@ jobs:
         sleep 4  # Wait for the app container to initialize
         docker logs go-blog-platform-app-develop-1
 
-        docker buildx build -f infrastructure/deployment/docker/Dockerfile.develop -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.NEW_TAG }} . --push
+        docker buildx build -f infrastructure/deployment/docker/Dockerfile.develop -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }} . --push
         docker buildx build -f infrastructure/deployment/docker/Dockerfile.develop -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest . --push
 
     # Step 9: List All Running Containers
@@ -103,7 +99,7 @@ jobs:
     # Step 10: Push Docker Image to Registry
     - name: Push Docker Image
       run: |
-        docker push ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.NEW_TAG }}
+        docker push ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }}
         docker push ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest
 
     # Step 12: Stop Running Containers
