--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -3,6 +3,12 @@ name: Develop Workflow with Version Tagging and Git Tag Sync
 on:
   pull_request:
     branches: [ "develop" ]
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Manually specify the version'
+        required: false
+        default: ''
 
 jobs:
   build-and-push:
@@ -20,28 +26,27 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Step 3: Determine Version Tag (Using Git Tag)
+    # Step 3: Determine Version Tag (Using Git Tag or Manually Provided Version)
     - name: Determine Version Tag
       id: version
       run: |
         # Fetch all Git tags
         git fetch --tags
         
-        # Get the latest Git tag or default to "v1.0.0"
-        LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
+        # Use manually provided version if available
+        if [ -n "${{ github.event.inputs.version }}" ]; then
+          VERSION="${{ github.event.inputs.version }}"
+        else
+          # Get the latest Git tag or default to "v1.0.0"
+          LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
 
-        # Parse the version (major.minor.patch)
-        IFS='.' read -r MAJOR MINOR PATCH <<< "$LATEST_TAG"
-        PATCH=$((PATCH+1))  # Increment the patch version
-        
-        # Set the new version (e.g., v1.0.1)
-        VERSION="v$MAJOR.$MINOR.$PATCH"
-
-        # Loop until we find a tag that does not exist
-        while git rev-parse "$VERSION" >/dev/null 2>&1; do
-          PATCH=$((PATCH+1))  # Increment patch version again
-          VERSION="$MAJOR.$MINOR.$PATCH"
-        done
+          # Parse the version (major.minor.patch)
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$LATEST_TAG"
+          PATCH=$((PATCH+1))  # Increment the patch version
+          
+          # Set the new version (e.g., v1.0.1)
+          VERSION="v$MAJOR.$MINOR.$PATCH"
+        fi
 
         echo "VERSION=$VERSION" >> $GITHUB_ENV
         echo "Version Tag: $VERSION"
