Test with auto tag

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -54,7 +54,7 @@ jobs:
 
 
 
-    # Step 4: Push New Git Tag
+    # Step 4: Push New Git Tag.
     - name: Push New Git Tag
       if: ${{ success() }}
       run: |
