--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -35,12 +35,21 @@ jobs:
         
         # Get the latest Git tag or default to "1.0.0"
         LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "1.0.0")
-
+        
         # Parse the version (major.minor.patch)
         IFS='.' read -r MAJOR MINOR PATCH <<< "$LATEST_TAG"
-        PATCH=$((PATCH+1))  # Increment the patch version
         
-        # Set the new version (e.g., 1.0.1)
+        # Check if the latest tag is a major version (e.g., "1")
+        if [[ "$MINOR" == "0" && "$PATCH" == "0" ]]; then
+          # If it's a major version (e.g., "1"), increment the minor version
+          MINOR=$((MINOR+1))
+          PATCH=0
+        else
+          # If it's a minor or patch version, increment the patch version
+          PATCH=$((PATCH+1))
+        fi
+        
+        # Set the new version (e.g., 1.0.1 or 1.1.0)
         VERSION="$MAJOR.$MINOR.$PATCH"
 
         # Loop until we find a tag that does not exist
