Refine develop workflow, refactor lint and unit tests workflows

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,32 +1,36 @@
-name: Develop Workflow with Version Tagging and Git Tag Sync
+name: Develop Workflow
 
 on:
   pull_request:
     branches: [ "develop" ]
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Manually specify the version'
-        required: false
-        default: ''
 
 jobs:
+  # Step 1: Call the Common Workflow.
+  common-workflow:
+    uses: ./.github/workflows/common.yml
+    with:
+      # Any required inputs for the common workflow can be passed here.
+    permissions:
+      contents: read
+      pull-requests: read
+
   build-and-push:
+    needs: common-workflow  # Ensure common workflow completes before proceeding.
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Check out the repository
+    # Step 2: Check out the repository.
     - name: Checkout Code
       uses: actions/checkout@v4
 
-    # Step 2: Log in to DockerHub
+    # Step 3: Log in to DockerHub.
     - name: Log in to DockerHub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Step 3: Determine Version Tag (Using Git Tag or Manually Provided Version)
+    # Step 4: Determine Version Tag (Using Git Tag or Manually Provided Version).
     - name: Determine Version Tag
       id: version
       run: |
@@ -48,7 +52,7 @@ jobs:
           # If it's a minor or patch version, increment the patch version
           PATCH=$((PATCH+1))
         fi
-        
+
         # Set the new version (e.g., 1.0.1 or 1.1.0)
         VERSION="$MAJOR.$MINOR.$PATCH"
 
@@ -61,7 +65,7 @@ jobs:
         echo "VERSION=$VERSION" >> $GITHUB_ENV
         echo "Version Tag: $VERSION"
 
-    # Step 4: Push New Git Tag
+    # Step 5: Push New Git Tag.
     - name: Push New Git Tag
       if: ${{ success() }}
       run: |
@@ -72,18 +76,18 @@ jobs:
         git tag "${{ env.VERSION }}"
         git push origin "${{ env.VERSION }}"
 
-    # Step 5: Set up Go
+    # Step 6: Set up Go.
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
         go-version: stable
 
-    # Step 6: Decode and Create YAML File
+    # Step 7: Decode and Create YAML File.
     - name: Decode and Create YAML File
       run: |
         echo "${{ secrets.DOCKER_DEVELOP_APPLICATION_CONFIG_YAML }}" | base64 -d > config/yaml/v1/docker.develop.application.yaml
 
-    # Step 7: Create .env File for MongoDB
+    # Step 8: Create .env File for MongoDB.
     - name: Create .env File for MongoDB
       run: |
         echo "MONGO_INITDB_DATABASE=${{ secrets.MONGO_INITDB_DATABASE }}" > infrastructure/script/data/repository/mongo/.env
@@ -92,7 +96,7 @@ jobs:
         echo "ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }}" >> infrastructure/script/data/repository/mongo/.env
         echo "ADMIN_HASHED_PASSWORD=${{ secrets.ADMIN_HASHED_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
 
-    # Step 8: Start MongoDB and App-Develop Containers
+    # Step 9: Start MongoDB and App-Develop Containers.
     - name: Start MongoDB and App Containers
       run: |
         docker compose up mongodb -d
@@ -102,22 +106,22 @@ jobs:
         sleep 4  # Wait for the app container to initialize
         docker logs go-blog-platform-app-develop-1
 
-    # Step 9: Build Docker Image for app-develop
+    # Step 10: Build Docker Image for app-develop.
     - name: Build Docker Image for app-develop
       run: |
         docker buildx build -f infrastructure/deployment/docker/Dockerfile.develop -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }} . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest --push
         docker buildx build -f infrastructure/deployment/docker/Dockerfile.develop -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }} --push
 
-    # Step 10: List All Running Containers
+    # Step 11: List All Running Containers.
     - name: List All Running Containers
       run: docker ps
 
-    # Step 11: Push Docker Image to Registry
+    # Step 12: Push Docker Image to Registry.
     - name: Push Docker Image
       run: |
         docker push ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }}
         docker push ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest
 
-    # Step 12: Stop Running Containers
+    # Step 13: Stop Running Containers.
     - name: Stop Running Containers
       run: docker stop $(docker ps -a -q)
