--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -41,8 +41,8 @@ jobs:
         echo "ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }}" >> infrastructure/script/data/repository/mongo/.env
         echo "ADMIN_HASHED_PASSWORD=${{ secrets.ADMIN_HASHED_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
 
-    # Step 6: Start MongoDB and App-Develop Containers.
-    - name: Start MongoDB and App Containers
+    # Step 6: Start MongoDB and App Develop Containers.
+    - name: Start MongoDB and App Develop Containers
       run: |
         docker compose up mongodb -d
         sleep 32  # Wait for MongoDB to start
@@ -59,20 +59,14 @@ jobs:
     - name: Stop Running Containers
       run: docker stop $(docker ps -a -q)
 
-    # Step 9: Build Docker Image for app-develop.
-    - name: Build Docker Image for app-develop
-      run: |
-        docker buildx build -f infrastructure/deployment/docker/Dockerfile.develop -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }} . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest --push
-        docker buildx build -f infrastructure/deployment/docker/Dockerfile.develop -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }} --push
-
-    # Step 10: Log in to DockerHub.
+    # Step 9: Log in to DockerHub.
     - name: Log in to DockerHub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Step 11: Determine Version Tag (Using Git Tag or Manually Provided Version).
+    # Step 10: Determine Version Tag (Using Git Tag or Manually Provided Version).
     - name: Determine Version Tag
       id: version
       run: |
@@ -107,7 +101,7 @@ jobs:
         echo "VERSION=$VERSION" >> $GITHUB_ENV
         echo "Version Tag: $VERSION"
 
-    # Step 12: Push New Git Tag.
+    # Step 11: Push New Git Tag.
     - name: Push New Git Tag
       if: ${{ success() }}
       run: |
@@ -117,6 +111,12 @@ jobs:
         # Create and push the new tag
         git tag "${{ env.VERSION }}"
         git push origin "${{ env.VERSION }}"
+
+    # Step 12: Build Docker Image for app-develop.
+    - name: Build Docker Image for app-develop
+      run: |
+        docker buildx build -f infrastructure/deployment/docker/Dockerfile.develop -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }} . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest --push
+        docker buildx build -f infrastructure/deployment/docker/Dockerfile.develop -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }} --push
 
     # Step 13: Push Docker Image to Registry.
     - name: Push Docker Image
