--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,8 +43,8 @@ jobs:
       run: |
         echo "${{ secrets.DOCKER_RELEASE_APPLICATION_CONFIG_YAML }}" | base64 -d > config/yaml/v1/docker.release.application.yaml
 
-    # Step 6: Start MongoDB and App-Release Containers.
-    - name: Start MongoDB and App Containers
+    # Step 6: Start MongoDB and App Release Containers.
+    - name: Start MongoDB and App Release Containers
       run: |
         docker compose up mongodb -d
         sleep 32  # Wait for MongoDB to start
@@ -61,20 +61,14 @@ jobs:
     - name: Stop Running Containers
       run: docker stop $(docker ps -a -q)
 
-    # Step 9: Build Docker Image for app-release.
-    - name: Build Docker Image for app-release
-      run: |
-        docker buildx build -f infrastructure/deployment/docker/Dockerfile.release -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-release:${{ env.VERSION }} . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-release:latest --push
-        docker buildx build -f infrastructure/deployment/docker/Dockerfile.release -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-release:latest . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-release:${{ env.VERSION }} --push
-
-    # Step 10: Log in to DockerHub.
+    # Step 9: Log in to DockerHub.
     - name: Log in to DockerHub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     
-    # Step 11: Determine Version Tag.
+    # Step 10: Determine Version Tag.
     - name: Determine Version Tag
       id: version
       run: |
@@ -90,7 +84,13 @@ jobs:
         echo "VERSION=$VERSION" >> $GITHUB_ENV
         echo "Version Tag: $VERSION"
 
-    # Step 11: Push Docker Image to Registry.
+    # Step 11: Build Docker Image for app-release.
+    - name: Build Docker Image for app-release
+      run: |
+        docker buildx build -f infrastructure/deployment/docker/Dockerfile.release -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-release:${{ env.VERSION }} . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-release:latest --push
+        docker buildx build -f infrastructure/deployment/docker/Dockerfile.release -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-release:latest . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-release:${{ env.VERSION }} --push
+
+    # Step 12: Push Docker Image to Registry.
     - name: Push Docker Image
       run: |
         docker push ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-release:${{ env.VERSION }}
