--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -83,20 +83,20 @@ jobs:
           # Parse the version (major.minor.patch)
           IFS='.' read -r MAJOR MINOR PATCH <<< "$LATEST_TAG"
           
-          # Check if there is only major and minor, and add patch .0 if missing
+          # If there's no PATCH value (like "1.3"), set PATCH to 0
           if [[ -z "$PATCH" ]]; then
             PATCH=0
+          else
+            # Increment the version based on the current version (increment patch by default)
+            PATCH=$((PATCH + 1))
           fi
-
-          # Increment the version based on the current version (increment patch by default)
-          PATCH=$((PATCH + 1))
           
           # Set the new version (e.g., 1.0.1 or 1.1.0)
           VERSION="$MAJOR.$MINOR.$PATCH"
           
           # Loop until we find a tag that does not exist
           while git rev-parse "$VERSION" >/dev/null 2>&1; do
-            PATCH=$((PATCH+1))  # Increment patch version again
+            PATCH=$((PATCH + 1))  # Increment patch version again if the tag already exists.
             VERSION="$MAJOR.$MINOR.$PATCH"
           done
         fi
