--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -82,27 +82,31 @@ jobs:
         if [[ -z "$LATEST_TAG" ]]; then
           VERSION="1.0.0"
         else
-          # Parse the version (major.minor.patch)
+          # Parse the latest version tag into major, minor, and patch components
           IFS='.' read -r MAJOR MINOR PATCH <<< "$LATEST_TAG"
           
-          # If there's no PATCH value (like "1.3"), set PATCH to 0
+          # If no PATCH is set, default to 0
           if [[ -z "$PATCH" ]]; then
             PATCH=0
-          else
-            # Increment the version based on the current version (increment patch by default)
+          fi
+
+          # Check the current version we're trying to create:
+          # If it has a different major or minor, it's a custom tag, so no need to increment
+          if [[ "$VERSION" =~ ^$MAJOR\.$MINOR\.$PATCH$ ]]; then
+            # It's the same version as the latest tag, increment the patch
             PATCH=$((PATCH + 1))
           fi
           
-          # Set the new version (e.g., 1.0.1 or 1.1.0)
+          # Form the new version tag
           VERSION="$MAJOR.$MINOR.$PATCH"
           
-          # Loop until we find a tag that does not exist
+          # Ensure the version doesn't already exist (increment if it does)
           while git rev-parse "$VERSION" >/dev/null 2>&1; do
-            PATCH=$((PATCH + 1))  # Increment patch version again if the tag already exists.
+            PATCH=$((PATCH + 1))  # Increment patch version again if the tag already exists
             VERSION="$MAJOR.$MINOR.$PATCH"
           done
         fi
-        
+
         echo "VERSION=$VERSION" >> $GITHUB_ENV
         echo "Version Tag: $VERSION"
 
