--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -45,10 +45,10 @@ jobs:
     - name: Start MongoDB and App Develop Containers
       run: |
         docker compose up mongodb -d
-        sleep 32  # Wait for MongoDB to start
+        sleep 32  # Wait for MongoDB to start.
         
         docker compose up app-develop -d
-        sleep 4  # Wait for the app container to initialize
+        sleep 4  # Wait for the app container to initialize.
         docker logs go-blog-platform-app-develop-1
 
     # Step 7: List All Running Containers.
@@ -70,17 +70,17 @@ jobs:
     - name: Determine Version Tag
       id: version
       run: |
-        # Fetch all tags
+        # Fetch all tags.
         git fetch --tags
         
-        # Get all tags and sort them to get the latest
+        # Get all tags and sort them to get the latest.
         LATEST_TAG=$(git tag -l | sort -V | tail -n 1)
         
-        # Set default version if no tag exists
+        # Set default version if no tag exists.
         if [[ -z "$LATEST_TAG" ]]; then
           VERSION="1.0.0"
         else
-          # Parse the version (major.minor.patch)
+          # Parse the version (major.minor.patch).
           IFS='.' read -r MAJOR MINOR PATCH <<< "$LATEST_TAG"
           
           # If there's no PATCH value (like "1.3"), set PATCH to 0
@@ -91,10 +91,10 @@ jobs:
             PATCH=$((PATCH + 1))
           fi
           
-          # Set the new version (e.g., 1.0.1 or 1.1.0)
+          # Set the new version (e.g., 1.0.1 or 1.1.0).
           VERSION="$MAJOR.$MINOR.$PATCH"
           
-          # Loop until we find a tag that does not exist
+          # Loop until we find a tag that does not exist.
           while git rev-parse "$VERSION" >/dev/null 2>&1; do
             PATCH=$((PATCH + 1))  # Increment patch version again if the tag already exists.
             VERSION="$MAJOR.$MINOR.$PATCH"
