--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -66,7 +66,7 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Step 10: Determine Version Tag (Using Git Tag or Manually Provided Version).
+        # Step 10: Determine Version Tag (Using Git Tag or Manually Provided Version).
     - name: Determine Version Tag
       id: version
       run: |
@@ -80,31 +80,28 @@ jobs:
         if [[ -z "$LATEST_TAG" ]]; then
           VERSION="1.0.0"
         else
-          # Parse the latest version tag into major, minor, and patch components.
-          IFS='.' read -r MAJOR MINOR PATCH <<< "$LATEST_TAG"
+          # Parse the latest tag (major.minor.patch).
+          IFS='.' read -r LATEST_MAJOR LATEST_MINOR LATEST_PATCH <<< "$LATEST_TAG"
           
-          # If no PATCH is set, default to 0.
-          if [[ -z "$PATCH" ]]; then
-            PATCH=0
+          # Fetch the previous tag (second latest).
+          PREVIOUS_TAG=$(git tag -l | sort -V | tail -n 2 | head -n 1)
+          
+          # If previous tag exists, parse it.
+          if [[ -n "$PREVIOUS_TAG" ]]; then
+            IFS='.' read -r PREVIOUS_MAJOR PREVIOUS_MINOR PREVIOUS_PATCH <<< "$PREVIOUS_TAG"
           fi
 
-          # Check the current version we're trying to create:
-          # If it has a different major or minor, it's a custom tag, so no need to increment
-          if [[ "$VERSION" =~ ^$MAJOR\.$MINOR\.$PATCH$ ]]; then
-            # It's the same version as the latest tag, increment the patch
-            PATCH=$((PATCH + 1))
+          # Check if it's a custom tag (for example: 1.5.0) or generated tag (like 1.4.0).
+          if [[ "$LATEST_MINOR" == "$PREVIOUS_MINOR" && "$LATEST_PATCH" -gt "$PREVIOUS_PATCH" ]]; then
+            # Custom tag detected: It's a fresh version, no increment needed.
+            VERSION="$LATEST_TAG"
+          else
+            # Handle generated tag scenario: Increment patch version.
+            PATCH=$((LATEST_PATCH + 1))
+            VERSION="$LATEST_MAJOR.$LATEST_MINOR.$PATCH"
           fi
-          
-          # Form the new version tag.
-          VERSION="$MAJOR.$MINOR.$PATCH"
-          
-          # Ensure the version doesn't already exist (increment if it does).
-          while git rev-parse "$VERSION" >/dev/null 2>&1; do
-            PATCH=$((PATCH + 1))  # Increment patch version again if the tag already exists
-            VERSION="$MAJOR.$MINOR.$PATCH"
-          done
         fi
-
+        
         echo "VERSION=$VERSION" >> $GITHUB_ENV
         echo "Version Tag: $VERSION"
 
@@ -130,4 +127,3 @@ jobs:
       run: |
         docker push ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }}
         docker push ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest
-        
